--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             justify-content: space-between;
         }
         body{
-            background-color: #081b29;
+            /* background-color: #081b29; */
         }
         .login-btn:hover{
            background-color:#000;
@@ -162,6 +162,17 @@
                 margin-left:1%;
                 margin-top:50%;
             }
+            .text-box{
+                font-size:20px;
+                left:10%;
+            }
+            .body h2{
+                font-size: 5vw;
+                margin-top:-18px;
+            }
+            .login-container{
+                margin-top:-220px;
+            }
         }
         .body{
             display:flex;
@@ -169,6 +180,7 @@
             align-items: center;
             min-height:100vh;
             background:#99dfe0;
+            /* margin-top:20%; */
             /* top:30%; */
         }
         .body h2{
