--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
             }
             .login-container{
                 margin-top:-220px;
+                /* width:100px; */
+                width:270px;
             }
         }
         .body{
