--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon shortcut" href="https://www.hdwallpapers.in/download/pink_rose_flower_with_buds_in_blur_background_4k_5k_hd_flowers-3840x2160.jpg">
     <!-- <link rel="icon shortcut" href="https://cdn4.iconfinder.com/data/icons/people-avatar-1-2/512/29-1024.png"> -->
-    <title>Happy Birthday Preethi</title>
+    <title>Happy Birthday</title>
     <style>
         *{
             border:0;
@@ -251,10 +251,10 @@
         <span>Y</span>
     </div>
     <div class="body">
-        <h2 data-text="Preethi...">Preethi...</h2>
+        <h2 data-text=""></h2>
     </div>
         <div class="login-container">
-            <h2>If you are <span>preethi</span> are not </h2><br>
+<!--             <h2>If you are <span>preethi</span> are not </h2><br> -->
                  <a target="_blank" href="page1.html"><button class="login-btn">Yes</button></a><br>
                  <a href="#"><button onclick="bala()" class="login-btn1">No</button></a>
                 <br>
