--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday card</title>
+    <title>Happy Birthday</title>
     <link rel="icon shortcut" href="https://www.hdwallpapers.in/download/pink_rose_flower_with_buds_in_blur_background_4k_5k_hd_flowers-3840x2160.jpg">
     <!-- <link rel="stylesheet" href="style.css"> -->
      <style>
@@ -174,7 +174,7 @@ body{
     <div class="card">
         <div class="outside">
             <div class="front">
-                <p>Happy Birthday future ips mam</p>
+                <p>Happy Birthday </p>
                 <div class="cake">
                     <div class="top-layer"></div>
                     <div class="middle-layer"></div>
