--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
         <script>
             function bala(){
-                alert("Sorry you can't open this file because you are not preethi.")
+                alert("Sorry you can't open this file because you .")
             }
             function createFlower() {
         const flower = document.createElement("div");
