--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <span>Y</span>
     </div>
     <div class="body">
-        <h2 data-text=""></h2>
+        <h2 data-text="PREETHI">PREETHI</h2>
     </div>
         <div class="login-container">
             <h2>If you are <span>preethi</span> are not </h2><br>
