--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
         <span>Y</span>
     </div>
     <div class="body">
-        <h2 data-text="PREETHI">PREETHI</h2>
+        <h2 data-text=""></h2>
     </div>
         <div class="login-container">
-            <h2>If you are <span>preethi</span> are not </h2><br>
+            <h2>If you are <span></span> are not </h2><br>
                  <a target="_blank" href="page1.html"><button class="login-btn">Yes</button></a><br>
                  <a href="#"><button onclick="bala()" class="login-btn1">No</button></a>
                 <br>
@@ -262,7 +262,7 @@
         </div>
         <script>
             function bala(){
-                alert("Sorry you can't open this file because you are not preethi .")
+                alert("Sorry you can't open this file because you are not  .")
             }
             function createFlower() {
         const flower = document.createElement("div");
