--- a/page1.html
+++ b/page1.html
@@ -174,7 +174,7 @@ body{
     <div class="card">
         <div class="outside">
             <div class="front">
-                <p>Happy Birthday future IPS maam</p>
+                <p>Happy Birthday</p>
                 <div class="cake">
                     <div class="top-layer"></div>
                     <div class="middle-layer"></div>
